# fiberplane

./: .editorconfig  .gitattributes  .gitignore  .taplo.toml  .yarnrc.yml  CHANGELOG.md  COMMUNITY.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  biome.json  biome.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  rome.json
base64uuid/: Cargo.toml  README.md
base64uuid/src/: lib.rs
fiberplane/: Cargo.toml  README.md
fiberplane-api-client/: Cargo.toml  README.md
fiberplane-api-client/src/: api_client.rs  builder.rs  clients.rs  lib.rs
fiberplane-ci/: Cargo.toml  README.md
fiberplane-ci/src/: lib.rs  toml_patcher.rs  versions.rs
fiberplane-ci/src/commands/: versions.rs
fiberplane-ci/src/utils/: artifactory.rs  crates.rs  git.rs  github.rs  mod.rs  toml_node.rs  toml_patcher.rs  toml_query.rs  versions.rs  workspaces.rs
fiberplane-markdown/: Cargo.toml  README.md
fiberplane-markdown/src/: lib.rs
fiberplane-markdown/src/from_markdown/: mod.rs  tests.rs
fiberplane-markdown/src/to_markdown/: mod.rs  tests.rs
fiberplane-models/: Cargo.toml  README.md  add_front_matter_type.md  build.rs
fiberplane-models/src/: auth.rs  autometrics.rs  blobs.rs  comments.rs  data_sources.rs  errors.rs  events.rs  formatting.rs  front_matter_schemas.rs  integrations.rs  labels.rs  lib.rs  pagerduty.rs  paging.rs  proxies.rs  query_data.rs  realtime.rs  snippets.rs  sorting.rs  templates.rs  timestamps.rs  tokens.rs  users.rs  views.rs  webhooks.rs  workspaces.rs
fiberplane-models/src/integrations/: slack.rs
fiberplane-models/src/notebooks/: cells.rs  front_matter.rs  mod.rs  operations.rs
fiberplane-models/src/notebooks/cells/: table_cell.rs
fiberplane-models/src/providers/: auto_suggest.rs  constants.rs  data.rs  error.rs  http.rs  status.rs
fiberplane-models/src/providers/schema/: config_schema.rs  query_schema.rs  supported_query_type.rs
fiberplane-models/src/providers/schema/fields/: array_field.rs  file_field.rs  (+8 more)
fiberplane-models/src/utils/: content_writer.rs
fiberplane-openapi-rust-gen/: Cargo.toml  README.md
fiberplane-openapi-rust-gen/files/: api_client.rs
fiberplane-openapi-rust-gen/src/: args.rs  client_config.rs  generator.rs  lib.rs  main.rs  routes.rs  types.rs
fiberplane-provider-protocol/: Cargo.toml
fiberplane-provider-protocol/fiberplane-provider-bindings/: Cargo.toml  README.md
fiberplane-provider-protocol/fiberplane-provider-bindings/src/: export.rs  types.rs
fiberplane-provider-protocol/fiberplane-provider-runtime/: Cargo.toml  README.md
fiberplane-provider-protocol/fiberplane-provider-runtime/src/spec/: bindings.rs  mod.rs  types.rs
fiberplane-provider-protocol/src/: main.rs
fiberplane-provider-protocol/ts-runtime/: index.ts  types.ts
fiberplane-templates/: Cargo.toml  README.md  fiberplane.libsonnet  jsdoc.json
fiberplane-templates/docs/: template_api.md
fiberplane-templates/src/: lib.rs
fiberplane-templates/src/convert/: mod.rs  tests.rs
fiberplane-templates/src/expand/tests/: frontmatter_tests.rs  mod.rs
fiberplane-templates/tests/: test.rs
fiberplane/src/: lib.rs
fiberscript/: Cargo.toml  README.md
fiberscript/src/: lib.rs  module_loader.rs
mondrian-charts/: Cargo.toml  README.md
mondrian-charts/src/: chart_to_image.rs  constants.rs  generate_bar_chart_from_timeseries.rs  generate_line_chart_from_timeseries.rs  generate_shape_list_from_events.rs  generate_stacked_bar_chart_from_timeseries.rs  generate_stacked_line_chart_from_timeseries.rs  lib.rs  types.rs
mondrian-charts/src/chart_to_image/: image_renderer.rs  mod.rs
mondrian-charts/src/chart_to_svg/: constants.rs  create_area_path_def.rs  create_line_path_def.rs  generate_chart_content_svg.rs  generate_grid_and_axes_svg.rs  generate_grid_with_axes_svg.rs  mod.rs  scales.rs  tick_formatters.rs
mondrian-charts/src/fiberplane/: generate_bar_chart_from_timeseries.rs  generate_line_chart_from_timeseries.rs  generate_shape_list_from_events.rs  generate_shape_list_from_target_latency.rs  generate_stacked_bar_chart_from_timeseries.rs  generate_stacked_line_chart_from_timeseries.rs  js_bindings.rs  mod.rs  types.rs
mondrian-charts/src/fiberplane/tests/: mod.rs  test_generate_bar_chart_from_timeseries.rs  test_generate_combined_chart.rs  test_generate_line_chart_from_timeseries.rs  test_generate_shape_list_from_events.rs  test_generate_stacked_bar_chart_from_timeseries.rs  test_generate_stacked_line_chart_from_timeseries.rs
mondrian-charts/src/fiberplane/utils/: attach_suggestions_to_x_axis.rs  calculate_bar_width.rs  calculate_bar_x.rs  calculate_buckets_and_axes_for_stacked_chart.rs  calculate_smallest_time_interval.rs  calculate_stacked_y_axis_range.rs  calculate_y_axis_range.rs  create_metric_buckets.rs  get_time_from_timestamp.rs  get_x_axis_from_time_range.rs  get_y_axis_for_constant_value.rs  split_into_continuous_lines.rs
mondrian-charts/src/tests/: test_generate_bar_chart_from_timeseries.rs  test_generate_line_chart_from_timeseries.rs  test_generate_shape_list_from_events.rs  test_generate_stacked_bar_chart_from_timeseries.rs  test_generate_stacked_line_chart_from_timeseries.rs
mondrian-charts/src/tests/snapshots/: mondrian_charts__tests__test_generate_bar_chart_from_timeseries__generate_bar_chart_from_timeseries-2.snap  mondrian_charts__tests__test_generate_line_chart_from_timeseries__generate_line_chart_from_timeseries-2.snap  mondrian_charts__tests__test_generate_shape_list_from_events__generate_shape_list_from_events.snap  (+3 more)
mondrian-charts/src/utils/: attach_suggestions_to_x_axis.rs  calculate_bar_width.rs  calculate_bar_x.rs  calculate_buckets_and_axes_for_stacked_chart.rs  calculate_smallest_time_interval.rs  calculate_stacked_y_axis_range.rs  calculate_y_axis_range.rs  create_metric_buckets.rs  get_time_from_timestamp.rs  get_x_axis_from_time_range.rs  get_y_axis_for_constant_value.rs  mod.rs  normalize_along_linear_axis.rs  split_into_continuous_lines.rs
xtask/: Cargo.toml  README.md
xtask/src/: constants.rs  main.rs
xtask/src/commands/: generate_api_client.rs  mod.rs  publish.rs  versions.rs
(+1336 files in other folders)
