[package]
name = "base64uuid"
description = "Type for representing base64url-encoded UUIDs"
version = "1.0.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["creation"]
creation = ["uuid/v4"]

[dependencies]
base64 = "0.13.0"
fp-bindgen = { workspace = true, optional = true }
serde = { workspace = true }
# Currently, sqlx does not export the macros without picking a runtime
# `runtime-tokio-rustls` can be removed once https://github.com/launchbadge/sqlx/issues/1627 is resolved
sqlx = { version = "0.6", default-features = false, optional = true, features = [
    "macros",
    "runtime-tokio-rustls",
] }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rmp-serde = "1.1.0"
serde_json = "1.0.74"
uuid = { workspace = true, features = ["serde"] }
