[dependencies]
anyhow = "1"
bytes = "1"
secrecy = "0"
serde_json = "1"

[dependencies.base64uuid]
features = []
workspace = true

[dependencies.fiberplane-models]
features = []
workspace = true

[dependencies.reqwest]
default-features = false
features = ["gzip", "json", "multipart", "rustls-tls"]
version = "0.11"

[dependencies.serde]
default-features = false
features = ["derive"]
version = "1"

[lib]
crate-type = ["rlib"]
edition = "2021"
name = "fiberplane_api_client"
path = "src/lib.rs"
required-features = []

[package]
description = "Generated API client for Fiberplane API"
edition = "2021"
name = "fiberplane-api-client"
readme = "README.md"
version = "1.0.0-beta.7"

[package.license]
workspace = true

[package.repository]
workspace = true
