[dependencies]
anyhow = "1"
bytes = "1"
secrecy = "0"
serde_json = "1"
thiserror = "1"
url = "2"

[dependencies.base64uuid]
features = []
workspace = true

[dependencies.fiberplane-models]
features = []
workspace = true

[dependencies.reqwest]
default-features = false
features = ["gzip", "json", "multipart", "rustls-tls"]
version = "0.12"

[dependencies.serde]
default-features = false
features = ["derive"]
version = "1"

[lib]
crate-type = ["rlib"]
edition = "2021"
name = "fiberplane_api_client"
path = "src/lib.rs"
required-features = []

[package]
authors = ["Fiberplane <info@fiberplane.com>"]
description = "Generated API client for Fiberplane API"
edition = "2021"
name = "fiberplane-api-client"
readme = "README.md"
rust-version = "1.70"

[package.license]
workspace = true

[package.repository]
workspace = true

[package.version]
workspace = true
