[package]
name = "fiberplane-markdown"
description = "Utilities to convert Fiberplane Notebooks to and from Markdown"
readme = "README.md"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = "1.0.0-beta.6"

[dependencies]
fiberplane-models = { workspace = true }
pulldown-cmark = "0.9.1"
pulldown-cmark-to-cmark = "10.0.1"
time = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-case = "2.0.2"
