[package]
name = "fiberplane-models"
description = "Core models used across Fiberplane"
readme = "README.md"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib"]

[features]
clap = ["dep:clap"]
fp-bindgen = ["base64uuid/fp-bindgen", "dep:fp-bindgen"]

[dependencies]
base64 = "0.13"
base64uuid = { workspace = true, default-features = false }
bytes = { workspace = true }
clap = { version = "4.1", default-features = false, optional = true, features = [
    "derive",
    "std",
] }
form_urlencoded = "1"
fp-bindgen = { workspace = true, optional = true, features = [
    "bytes-compat",
    "serde-json-compat",
    "time-compat",
] }
rmpv = "1"
rmp-serde = "1.0"
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
# Currently, sqlx does not export the macros without picking a runtime
# `runtime-tokio-rustls` can be removed once https://github.com/launchbadge/sqlx/issues/1627 is resolved
sqlx = { version = "0.6", default-features = false, optional = true, features = [
    "macros",
    "runtime-tokio-rustls",
] }
thiserror = "1.0"
time = { workspace = true }
typed-builder = { workspace = true }
url = { workspace = true, features = ["serde"] }
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
pretty_assertions = "1.3"
serde_json = "1.0"
