[package]
name = "fiberplane-models"
description = "Core models used across Fiberplane"
readme = "README.md"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = "1.0.0-beta.10"

[lib]
crate-type = ["lib"]

[features]
clap = ["dep:clap"]
fp-bindgen = ["base64uuid/fp-bindgen", "dep:fp-bindgen"]

[dependencies]
base64 = "0.13"
base64uuid = { workspace = true, default-features = false }
bytes = { workspace = true }
clap = { version = "4.1", default-features = false, optional = true, features = [
    "derive",
    "std",
] }
form_urlencoded = "1"
fp-bindgen = { workspace = true, optional = true, features = [
    "bytes-compat",
    "serde-json-compat",
    "time-compat",
] }
rmpv = "1"
rmp-serde = "1.0"
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
sqlx = { version = "0.7.3", default-features = false, optional = true, features = ["macros"] }
thiserror = "1.0"
time = { workspace = true }
typed-builder = { workspace = true }
url = { workspace = true, features = ["serde"] }
strum = "0.24"
strum_macros = "0.24"
ordered-float = { version = "4.1.1", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.3"
serde_json = "1.0"
