[package]
name = "fiberplane-provider-protocol"
description = "Fiberplane provider protocol for WASM integration"
version = "2.0.0-alpha.1"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
bytes = { workspace = true }
fp-bindgen = { workspace = true, features = ["bytes-compat", "generators"] }
fiberplane-models = { workspace = true, features = ["fp-bindgen"] }
serde_json = { workspace = true }
