[package]
name = "fiberplane"
description = "All the Fiberplane crates in one place"
readme = "README.md"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = "1.0.0-beta.9"

[lib]
crate-type = ["lib"]

[features]
api-client = ["fiberplane-api-client"]
base64uuid-creation = ["base64uuid/creation"]
clap = ["fiberplane-models?/clap"]
fp-bindgen = ["base64uuid?/fp-bindgen", "fiberplane-models?/fp-bindgen"]
markdown = ["fiberplane-markdown"]
models = ["fiberplane-models"]
provider-bindings = ["fiberplane-provider-bindings"]
provider-runtime = ["fiberplane-provider-runtime"]
sqlx = ["base64uuid?/sqlx", "fiberplane-models?/sqlx"]
templates = ["fiberplane-templates"]

[dependencies]
base64uuid = { workspace = true, default-features = false, optional = true }
fiberplane-api-client = { workspace = true, optional = true }
fiberplane-markdown = { workspace = true, optional = true }
fiberplane-models = { workspace = true, optional = true }
fiberplane-provider-bindings = { workspace = true, optional = true }
fiberplane-provider-runtime = { workspace = true, optional = true }
fiberplane-templates = { workspace = true, optional = true }
