[package]
name = "fiberscript"
description = "TypeScript runtime for building Fiberplane integrations"
readme = "README.md"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = "0.1.0"

[dependencies]
deno_ast = { version = "0.31.6", features = ["transpiling"] }
deno_runtime = "0.136"
