[package]
name = "mondrian-charts"
description = "Abstract chart generator"
readme = "README.md"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = "0.1.0"

[features]
default = ["fiberplane", "image", "wasm-bindgen"]
fiberplane = ["dep:fiberplane-models"]
image = ["dep:csscolorparser", "dep:image", "dep:resvg", "svg"]
svg = ["dep:itertools", "dep:time"]
wasm-bindgen = ["dep:wasm-bindgen"]

[dependencies]
csscolorparser = { version = "0.6", optional = true }
fiberplane-models = { workspace = true, optional = true }
image = { version = "0.24", optional = true }
itertools = { version = "0.11", optional = true }
resvg = { version = "0.35", optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
