[package]
name = "mondrian-charts"
description = "Abstract chart generator and renderer"
readme = "README.md"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = ["chart", "charts", "metrics", "prometheus", "opentelemetry"]
repository = { workspace = true }
rust-version = { workspace = true }
version = "0.7.0"

[features]
default = ["fiberplane", "image"]
fiberplane = ["dep:fiberplane-models"]
image = ["dep:csscolorparser", "dep:image", "dep:resvg", "svg"]
svg = ["dep:itertools", "dep:time"]

[dependencies]
csscolorparser = { version = "0.6", optional = true }
fiberplane-models = { workspace = true, optional = true }
image = { version = "0.24", optional = true }
itertools = { version = "0.11", optional = true }
resvg = { version = "0.35", optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
