[package]
name = "fiberplane-provider-bindings"
version = "2.0.0-beta.8"
authors = { workspace = true }
edition = "2018"
description = "Fiberplane Provider protocol bindings"
readme = "README.md"
license = { workspace = true }

[dependencies]
bytes = { version = "1", features = ["serde"] }
fiberplane-models = { workspace = true }
fp-bindgen-support = { workspace = true, features = ["async", "guest"] }
once_cell = { workspace = true }
rmp-serde = { version = "1.0" }
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
time = { version = "0.3", features = ["serde-well-known"] }
