[package]
name = "fiberplane-provider-runtime"
description = "Wasmer runtime for Fiberplane Providers"
readme = "README.md"
version = "2.0.0-alpha.1"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
bytes = { workspace = true }
fp-bindgen-support = { workspace = true, features = ["async", "host"] }
fiberplane-models = { workspace = true }
rand = "0.8.0"
reqwest = { version = "0.11.4", default-features = false, features = [
    "rustls-tls",
] }
rmp-serde = "1.0.0"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = "1.9.0"
tracing = { workspace = true }
wasmer = { version = "2.3", default-features = false, features = [
    "compiler",
    "cranelift",
    "singlepass",
] }
